2.0.7.dev0
 * #1083: Add "debug_passphrase"/"display_passphrase" options and a "{unixtime}" placeholder in
   support of Borg 2 features.
 * #1099: Clarify documentation on command hooks order of execution.
 * #1100: Fix a bug in which "borg --version" failing isn't considered a "fail" state in a command
   hook.

2.0.6
 * #1068: Fix a warning from LVM about leaked file descriptors.
 * #1086: Fix for the "spot" check breaking when the "--progress" flag is used.
 * #1089: Fix for the "spot" check erroring when a checksum command errors.
 * #1091: Fix for the "config generate" action generating invalid configuration when upgrading
   deprecated command hooks.
 * #1093: Fix for the LVM hook erroring when the "--dry-run" flag is used.
 * #1094: Fix incorrect documentation about customizing Borg exit codes:
   https://torsion.org/borgmatic/docs/how-to/customize-warnings-and-errors/
 * #1095: Fix for the "spot" check's "xxh64sum_command" option erroring on commands containing
   spaces.
 * Add support for Borg 2's "s3:" and "b2:" repository URLs, so you can backup to S3 or B2 cloud
   storage services even without using Rclone.
 * During the "spot" check, truncate log messages containing many file paths.

2.0.5
 * #1033: Add a "password_transport" option to the MariaDB and MySQL database hooks for customizing
   how borgmatic transmits passwords to the database client.
 * #1078: Add "keep_3monthly" and "keep_13weekly" options for customizing "prune" action archive
   retention.
 * #1078: Add a "use_chunks_archive" option for controlling whether Borg uses its chunks cache
   directory.
 * #1078: For the "compact" action, pass "--dry-run" through to Borg.
 * #1085: Fix a regression in which the default monitoring verbosity is 0 (warnings only) instead of
   1 (info about steps borgmatic is taking). This prevented logs from showing up in monitoring
   services like Healthchecks unless you had an explicit monitoring verbosity set.