@@ -1,4 +1,5 @@
 2.0.7.dev0
+ * #1032: Fix a bug in which a Borg archive gets created even when a database hook fails.
  * #1083: Add "debug_passphrase"/"display_passphrase" options and a "{unixtime}" placeholder in
    support of Borg 2 features.
  * #1099: Clarify documentation on command hooks order of execution.
